# ECE49022Team18

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  Session.vim  build.sh  flash.sh  lv_conf.h  rebuild.sh
Config/: FreeRTOSConfig.h  lv_conf.h
src/: CMakeLists.txt  debug_screen.c  debug_screen.h  display.c  display.h  errors.c  keys.c  keys.h  main.c  motor_control.c  motor_control.h  pid_controller.c  pid_controller.h  pid_temp.c  pid_temp.h  prod_screen.c  prod_screen.h  read_temp.c  read_temp.h  ui.c  ui.cpp  ui.h  weight_sensor.c  weight_sensor.h
